# IslandGenerator

./: Cargo.toml  README.md
src/: game.rs  glob.rs  logging.yaml  main.rs  renderer.rs  user_cmds.rs  world.rs
src/glob/: types.rs
src/renderer/: egui_allegro_backend.rs  engine.rs  gui.rs  map.rs  settings.rs
src/world/: island.rs
src/world/island/: tile.rs
textures/src /blender/: forster.blend  forster.blend1  grass_tile.blend  grass_tile.blend1  housing.blend  housing.blend1  player.blend  tree.blend  tree.blend1
textures/src /gimp/: focused_green.xcf  grass.xcf  grass_rock.xcf  rock.xcf  sand.xcf  water.xcf
