[package]
name = "island_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allegro="0.0.44"
allegro_font="0.0.44"
allegro-sys="0.0.44"
allegro_primitives="0.0.44"
allegro_image="0.0.44"
egui="0.19"
epaint="0.19"
rand="0.8.5"
num="0.4"
log="0.4"
log4rs="1.1"
serde_yaml="0.9"
euclid="0.22"
